# SelentialCore-New-level-optimization-AI

./: Cargo.toml  LICENSE  README.md  setup.sh
adapters/: teaching.gguf
