[package]
name = "selential_core"
version = "0.1.0"
edition = "2021"
description = "Sential - Rust-native MoLoRA engine with llama.cpp backend"

[[bin]]
name = "selential"
path = "src/main.rs"

[dependencies]
llama-cpp-2 = { version = "0.1", features = ["cuda"] }
llama-cpp-sys-2 = { version = "0.1", features = ["cuda"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
